--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "expo": "~38.0.8",
+    "expo": "^38.0.10",
     "expo-permissions": "~9.0.1",
     "expo-sqlite": "^8.2.1",
     "expo-status-bar": "^1.0.2",
+    "mapview": "^1.0.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-maps": "0.27.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-native-web-maps": "^0.3.0",
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
