--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/material-bottom-tabs": "^5.3.15",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
     "dotenv": "^8.2.0",
     "expo": "^38.0.10",
     "expo-permissions": "~9.0.1",
@@ -17,10 +22,19 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.27.1",
+    "react-native-paper": "^4.8.1",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
     "react-native-web-maps": "^0.3.0",
-    "redux-devtools-extension": "^2.13.8"
+    "react-navigation": "^4.4.4",
+    "react-navigation-native": "0.0.0",
+    "react-navigation-stack": "^2.10.4",
+    "redux-devtools-extension": "^2.13.8",
+    "react-native-svg": "12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
